assets/styles/app.css
/* Page layout */
* { font-size: 1rem;
    font-family: Arial, Helvetica, sans-serif;
    padding:0;
    margin:0;
}
html, body {
    overflow:hidden;
    width:100%;
    min-width: 100%;
    max-width: 100%;
    height:100%;
    min-height: 100%;
    max-height: 100%;
}

ul {
    list-style-type: none;
}

h1 {
    font-size:1em;
    font-weight:400;
    position:absolute;
    left:0;
    top:0;
    right:0;
    bottom:0;
    text-align:center;
    line-height:2.1em;
    margin: 0 2em;
    box-sizing: border-box;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow:hidden;
    display:block;
}

#navbar {
    position:absolute;
    left:0;
    top:0;
    width:100%;
    font-size:1.4em;
    height:2em;
    background-color:#ff0000;
    z-index:1000;
}

#modal {display:none;}

#go-back {
    font-size:1em;
    position: absolute;
    left:0;
    top:0;
    bottom:0;
    padding:0;
    width:2em;
    height:2em;
}
#toggle-menu {
    font-size:1em;
    position:absolute;
    right:0;
    top:0;
    bottom:0;
    width:2em;
    height:2em;
    padding:0;
}
#menu {
    font-size:1em;
    position:absolute;
    top:0;
    opacity:0;
    height:100%;
    width:12em;
    right:0;
    /*right:-12em;*/
    max-width:80%;
    background-color:blue;
    padding-top:2.8em;
    box-sizing:border-box;
    transition: opacity 0.2s, right 1s;
    z-index: 101;
}
#menu.open {
    /*right:0;*/
    opacity:1;
    transition:right 0.5s, opacity 0.2s;
}
#overlay {
    font-size:1em;
    background-color: transparent;
    position:absolute;
    pointer-events: none;
    top:0;
    left:0;
    width:100%;
    height:100%;
    z-index:100;
    transition: background-color 0.5s, backdrop-filter 0.5s, -webkit-backdrop-filter 0.5s;
}
#menu.open ~ #overlay, #modal.open ~ #overlay {
    background-color: rgba(255, 255, 255, 0.3);
    backdrop-filter: blur(6px);
    -webkit-backdrop-filter: blur(6px);
    z-index:100;
    pointer-events: all;
}

#login {
    position:absolute;
    top:-150%;
    left:0;
    width:100%;
    height:100%;
    z-index:1001;
    pointer-events: none;
    transition: top 0.3s ease-out;
    background-color:#ccc;
}

#login.open {
    top:0;
    pointer-events: all;
}

main {
    position:absolute;
    top:0;
    left:0;
    height:100%;
    width:100%;
    box-sizing: border-box;
    padding-top: 2.8em;
}
@keyframes page-enter {
    from { left: 100%; opacity: 1; }
    to { left:0; opacity:1 }
}

@keyframes page-exit {
    from { left: 0; opacity: 1; }
    to { left:100%; opacity:1 }
}

#nav-stack>li {
    font-size: 1em;
    position:absolute;
    top:0;
    width: 100%;
    height: 100%;
    box-sizing:border-box;
    padding-top: 2.8em;
    z-index:1;
    animation-name: page-enter;
    animation-duration: 0.4s;
    animation-timing-function: ease-out;
    animation-fill-mode: forwards;
    background-color:white;
}

#nav-stack>li.pending-delete {
    animation-name: page-exit;
}

/* Inputs */
button {
    border: 0;
    padding: 0.8em 0.2em;
    width: 100%;
    display: block;
    background-color:transparent;
    border: 1px solid transparent;
    border-radius: 0.2em;
    outline:none;
    box-sizing: border-box;
    border-bottom: 2px solid transparent;
    position: relative;
    overflow: hidden;
    cursor:pointer;
}

@keyframes ripple {
    0% {
      transform: scale(0, 0);
      opacity: 1;
    }
    20% {
      transform: scale(40, 40);
      opacity: 1;
    }
    100% {
      opacity: 0;
      transform: scale(65, 65);
    }
}

button:after {
    content: '';
    position: absolute;
    top: 50%;
    left: 50%;
    width: 5px;
    height: 5px;
    background: rgba(255, 255, 255, .3);
    opacity: 0;
    border-radius: 50%;
    transform: scale(1, 1) translate(-50%);
    transform-origin: 50% 50%;
  }
  
  
  button:focus:not(:active)::after {
    animation: ripple 0.6s ease-out;
  }

button:active {
    top:2px;
    border-bottom-color: transparent !important;
}

input, select {
    margin: 0.5em 0;
}

.inverted {
    color:#fff;
}

.scrollable {
    overflow-y:auto;
}

input {
    width:100%;
    padding: 1.1em 0.3em 0.1em 0.3em;
    background-color:transparent;
    border:0;
    border-bottom:1px solid rgba(0, 0, 0, 0.6);
    outline:none;
    display: block;
    box-sizing: border-box;
}
input.inverted {
    border-color:rgba(255, 255, 255, 0.6);
}

input:focus {
    border-bottom-color: #0071fe;
}
input.inverted:focus {
    border-bottom-color: #fff;
}

button.primary {
    text-transform: uppercase;
    background-color: #0071fe;
    border-bottom-color:#00469c;
    color: #fff;
}

button.secondary {
    text-transform: uppercase;
    background-color: transparent;
    border-color: rgba(0, 0, 0, 0.6);
}

input.inverted:focus {
    border-color:rgba(255, 255, 255, 0.8);
}
.field {
    position:relative;
    padding-bottom: 1em;
}
.field label {
    position:absolute;
    display:block;
    top:0;
    left:0;
    bottom:0;
    right:0;
    padding: 1.1em 0.3em 0.1em 0.3em;
    box-sizing: border-box;
    color:rgba(0, 0, 0, 0.8);
    pointer-events: none;
    text-align: left;
    font-size: 1em;
    transition: font-size 0.2s, top 0.2s, color 0.2s;
}
.field input:focus+label, .field input:valid+label {
    font-size:0.7em;
    top:-1em;
}
.field input:focus+label {
    color: #0071fe;
}
.field input.inverted:focus+label {
    color: #fff;
}
.field label.inverted {
    color:rgba(255, 255, 255, 0.6);
}

